# aide

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  run_tests.sh
.claude/: README.md
.claude/build-logs/: toolbar-and-pill.md
.claude/build_logs/: 2026-02-21_dashboard_fab_preview_padding.md  ISSUE_43_INLINE_PREVIEW.md  PHASE_0B_REDUCER.md  PHASE_0C_MOCK_LLM_TELEMETRY.md  PHASE_0_1_INFRASTRUCTURE.md  PHASE_1_2_DATA_MODEL.md  PHASE_1_4_WEB_CHAT_UI.md  PHASE_1_6_PUBLISHED_PAGE_SERVING.md  PHASE_1_7_RELIABILITY_FLIGHT_RECORDER.md  PHASE_4_REAL_LLM.md  issue-61-cli-history-streaming-rendering.md  issue_105_progress.md  issue_108_progress.md  issue_109_progress.md  issue_110_progress.md  issue_111_progress.md  issue_112_progress.md  issue_113_progress.md  issue_114_progress.md  issue_130_progress.md  issue_131_progress.md  issue_149_progress.md  issue_150_progress.md  issue_151_progress.md  issue_152_progress.md  issue_160_progress.md  issue_170_progress.md  issue_171_progress.md  issue_173_progress.md  issue_178_progress.md  issue_179_progress.md  issue_67_progress.md  issue_68_progress.md  issue_72_progress.md  issue_74_progress.md  (+10 more)
alembic/: env.py
backend/: auth.py  config.py  db.py  main.py
cli/: README.md  pyproject.toml
cli/aide_cli/: __init__.py  auth.py  bridge.js  client.py  config.py  main.py  node_bridge.py  repl.py
docker/: init-db.sql
docs/: aide_cicd.md  aide_data_access.md  aide_demo.md  aide_design_system.md  aide_flight_recorder_design.md  aide_infrastructure.md  aide_launch_plan.md  aide_monitoring.md  aide_prd.md  aide_security_checklist.md  api_auth.md
engine/: SKILL.md  __init__.py  engine.min.js  package-lock.json  package.json  tsconfig.json
frontend/: cli-auth.html  display.js  flight-recorder.html  flight_recorder.html  flight_recorder_new.html  index.html  package-lock.json  package.json  spa.html  vite.config.js
scripts/: build_engine_python.py  eval_0a.py  render.js  seed_demo_aide.py  setup-runner.sh
static/: display.js
(+4479 files in other folders)
