[project]
name = "aide"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
]
ignore = [
    "S101", # assert used (fine in tests)
    "B008", # Depends() in function signature is standard FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["backend/tests"]
