[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aide-cli"
version = "0.1.0"
description = "Terminal REPL for AIde"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "AIde Team"}
]
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
aide = "aide_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aide_cli*"]
